# minimap2

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  jenkinsut  mmsw.conf  run
cmake/: FindBlaze.cmake  FindFalconLM.cmake  FindGoogle.cmake  FindHTS.cmake  FindIntelAltera.cmake  FindKSight.cmake  FindXilinx.cmake
kflow/: CMakeLists.txt
kflow/examples/: common.mk
kflow/examples/mmul/: .gitignore  Makefile  base.cpp  main.cpp
kflow/examples/norm/: Makefile  main.cpp
kflow/examples/norm2/: .gitignore  Makefile  compute.cpp  gen.cpp
kflow/examples/norm3/: main.cpp
kflow/include/kflow/: Common.h  MapPartitionStage.h  MapStage.h  MegaPipe.h  OccupancyCounter.h  Pipeline.h  Queue.h  SinkStage.h  SourceStage.h  Stage.h
kflow/src/: Common.cpp  MegaPipe.cpp  Pipeline.cpp  Stage.cpp
minimap2/: CMakeLists.txt  align.c  bseq.c  format.c  ksw2.h  main.c  map.c  minimap.h  mmpriv.h
src/: .MnmpCpuStages.bak.1  MnmpCpuStages.cpp  MnmpCpuStages.h  MnmpData.cpp  MnmpData.h  MnmpDebug.cpp  MnmpDebug.h  MnmpGlobal.h  MnmpOptions.cpp  MnmpOptions.h  MnmpStagesCommon.h  MnmpUtils.cpp  MnmpUtils.h  MnmpWrapper.cpp  MnmpWrapper.h  main.cpp
src/cpu_stages/: BamFileBuffer.h  BamReadStage.cpp  BamReadStage.h  BamSortStage.cpp  BamSortStage.h  BamWriteStage.cpp  BamWriteStage.h  BucketSortStage.cpp  BucketSortStage.h  CoordSortStage.cpp  CoordSortStage.h  IndexGenStage.cpp  IndexGenStage.h  KseqsReadStage.cpp  KseqsReadStage.h  KseqsToBseqsStage.cpp  KseqsToBseqsStage.h  MarkDupStage.cpp  MarkDupStage.h  MarkDupStage2.cpp  MnmpAlignStage.cpp  MnmpAlignStage.h  MnmpChainStage.cpp  MnmpChainStage.h  MnmpCpuStages.h  MnmpMapStage.cpp  MnmpMapStage.h  ReorderStage.cpp  ReorderStage.h  SeqsReadStage.cpp  SeqsReadStage.h  SeqsWriteStage.cpp  SeqsWriteStage.h  samblaster.cpp  samblaster.h  sbhash.cpp  sbhash.h
src/fpga_stages/: CMakeLists.txt  MnmpAlignFpgaStage.cpp  MnmpAlignFpgaStage.h  MnmpFpgaStages.h
src/fpga_stages/MnmpAlignFPGAUtils/blaze_interface/: MnmpSWClient.cpp  MnmpSWClient.h  MnmpSWWorker.cpp  MnmpSWWorker.h
src/fpga_stages/MnmpAlignFPGAUtils/blaze_task/xlnx/: CMakeLists.txt  MnmpSWTask.cpp  MnmpSWTask.h
src/fpga_stages/MnmpAlignFPGAUtils/host_interface/: host_types.h  mmsw.h  mmsw_baseline.cpp  mmsw_baseline.h  mmsw_fpga.cpp  mmsw_fpga.h  mmsw_orig.cpp  mmsw_orig.h
test/: CMakeLists.txt  test-driver.sh
test/data/: test.mmi
test/src/: CpuStagesTests.cpp  TestUtils.cpp  TestUtils.h  TestsCommon.h  main.cpp
